--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,8 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
+\usepackage[margin=0.94in]{geometry}
+
 
 \begin{document}
 
@@ -42,13 +44,13 @@
 
 \centerline{\bf \huge CHETAN CHAWLA}
 \vspace{-0.3cm}
-\address{ \noindent\rule{8.5cm}{0.8pt} \\ C-4 Tagore Garden Extension \\ New Delhi, 110027\\ India  \\ \noindent\rule{8.5cm}{0.8pt}} 
+\address{ \noindent\rule{8.5cm}{0.8pt} \\ New Delhi, India\\
+Phone: (+91) 90133 07073 \\  \noindent\rule{8.5cm}{0.8pt}} 
 
 \address{\noindent\rule{8.5cm}{0.8pt} 
 \\ Website: \href{https://sites.google.com/view/chetanchawla}{\textcolor{blue}{sites.google.com/view/chetanchawla}}
 \\ Email: \href{mailto:chetanchawlacc4@gmail.com}{\textcolor{blue}{chetanchawlacc4@gmail.com}}
-\\ 
-Phone: (+91) 90133 07073 \\\noindent\rule{8.5cm}{0.8pt}}
+\\\noindent\rule{8.5cm}{0.8pt}}
 
 
 
@@ -57,36 +59,35 @@ Phone: (+91) 90133 07073 \\\noindent\rule{8.5cm}{0.8pt}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Current Position Section
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{CURRENT POSITION}
+\section{POSITIONS}
 \vspace{\titlegap}
 {\bf \href{https://www.zs.com/}{\textcolor{blue}{ZS Associates}},} New Delhi, India\\
-Business Technology Analyst, Jun'19 -- present
+Business Technology Analyst, Jun'19 -- Jan'21
 \begin{itemize}
-    \item Development of end-to-end systems for alignment of sales to medical representatives using heterogeneous data sources
-    \item Enhancements and automation of monthly incentive compensation systems using SQL and Unix scripting
+    \item Development, Testing \& Deployment of 1-click end-to-end systems for sales alignment of US-based medical representatives using SQL \& Unix scripting, and analysis using Tableau
+    \item Automated several high-impact reporting modules like Textual insights generation, Data Pull \& Business Rule Implementations, and Backup-Deletion systems
 \end{itemize}
 
 
-\vspace{\sectgap}
-\hline
+% \vspace{\sectgap}
+% \hline
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Past Position Section
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{PAST POSITIONS}
-\vspace{\titlegap}
-{\bf Indian Insitute of Technology,} EE Department (IIT Delhi), Delhi, India\\
-Research Intern, Jun'18 – Aug'18
+% \section{PAST POSITIONS}
+% \vspace{\titlegap}
+{\bf Indian Insitute of Technology, Delhi, India} - Electrical \& Electronics Dept\\
+Research Intern, Jun'18 – Aug'18 \hfill Mentor: \href{https://web.iitd.ac.in/~brejesh/}{Dr.Brejesh Lall} (Head, EE Dept, IIT-D)
 \begin{itemize}
-    \item Research and development of pedestrian trajectory prediction methodologies and optimization of multi-object tracking algorithms for dynamic vehicle-dashboard cameras, under the guidance of Dr.Brejesh Lall (Head, EE Dept, IIT-D)
-    \item Creating and benchmarking an Indian road detection and tracking dataset (over 50,000 annotated frames containing 7 classes and occlusion information)
+    \item Research and development of pedestrian trajectory prediction methodologies and optimization of multi-object tracking algorithms for dynamic vehicle-dashboard cameras
+    \item Creating and benchmarking an Indian road detection and tracking dataset (over 50,000 annotated frames containing 7 classes and occlusion information). \textcolor{blue}{\href{https://drive.google.com/file/d/1VzW1S9UInuxXegAi2ursUIjQHOWDsS6R/view?usp=sharing}{Report Link}}
 \end{itemize} 
 
-\href{https://celestini.org/programs/india/reducing-pedestrian-traffic-fatalities/}{\textbf{\textcolor{blue}{Celestini Project India}}}, Marconi Society \& IIT Delhi, India\\
-Project Intern, Jun'17 – Jul'17
+\href{https://www.marconisociety.org/programs-services/}{\textbf{\textcolor{blue}{Celestini Project India}}}, Marconi Society \& IIT Delhi, India\\
+Project Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github.io/achowdhery-website/index.html}{Dr.A Chowdhery} (Google Brain, Tensorflow)
 \begin{itemize}
-\item Prototyping and creating test-bed for a low latency collaborative driver assistance system to prevent on-road collisions using real-time networking of sensory data from vehicles
-\item Guided by:  \href{http://www.achowdhery.com/}{Dr.Aakanksha Chowdhery} (Google Brain, Tensorflow)
+\item Prototyping and creating test-bed for a low latency collaborative driver assistance system to prevent on-road collisions using real-time networking of sensory data from vehicles. \textcolor{blue}{\href{https://bhartischool.iitd.ac.in/pdf/7thISSUEnewsletter.pdf}{Link (Pg4)}}
 \end{itemize}
 
 
@@ -102,12 +103,12 @@ Project Intern, Jun'17 – Jul'17
 {\bf Bachelors of Technology, Electronics and Communication Engineering} \hfill Aug'15 -- Jul'19 \\ 
 \href{http://bvcoend.ac.in}{\textcolor{blue}{Bharati Vidyapeeth's College Of Engineering}}\\
 Guru Gobind Singh Indraprastha University (GGSIPU), New Delhi, India \\
-\textbf{CGPA}: 8.94 out of 10 \hspace{0.2in}
-Advisor: Asst. Prof. Abhishek Gagneja
+\textbf{CGPA}: 8.94 out of 10 (Silver Medalist) \hspace{0.2in}
+\hfill Advisor: Asst. Prof. Abhishek Gagneja
 
-{\bf AISSCE, CBSE Board (XII)} \hfill Apr'14 -- May'15 \\ 
+{\bf AISSCE, CBSE Board (XII grade - Science Stream)} \hfill Apr'14 -- May'15 \\ 
 Kendriya Vidyalaya Tagore Garden, New Delhi, India\\
-\textbf{Percentage}: 95\% (Positioned in top 1.5\%, KVS India)
+\textbf{Percentage}: 95\% (Gold Medalist, Positioned in top 1.5\%, KVS India)
 
 \vspace{\sectgap}
 \hline
@@ -120,7 +121,7 @@ Kendriya Vidyalaya Tagore Garden, New Delhi, India\\
 \vspace{0.2in} 
 
 \begin{itemize}
-    \item Project Champions Award, ZS Associates, New Delhi, India \hfill 2019
+    \item Project Champions Award, ZS Associates, New Delhi, India \hfill 2019, 2020
     \item Best Student of the Year Award, Electronics and Communication dept., Bharati \\
     Vidyapeeth's College Of Engineering\hfill 2019
     \item{}JK Pal Memorial- Best Student Volunteer Award, IEEE Delhi Section (R10) \hfill 2019
@@ -131,50 +132,31 @@ Kendriya Vidyalaya Tagore Garden, New Delhi, India\\
 \end{itemize}
 
 \vspace{\sectgap} 
+
 \hline
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	GRANTS SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section{GRANTS}
-
-
-%\vspace{\sectgap} 
-
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	PROPOSALS SECTION
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%\section{\centerline{PROPOSALS}}
-
-%\vspace{\titlegap} % Gap between title and text
-
-%Co.I., ``Spatially Resolved Emission Line Ratios for Nuclear AGN Selection,'' Hubble Space 
-%Telescope Cycle 25 Archival Proposal, ID 15008
-
-
-%\vspace{\sectgap} % Some whitespace between sections
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	PUBLICATIONS SECTION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{PUBLICATIONS}
+\section{\large RESEARCH}
+
 \vspace{\titlegap}
+
+\textbf{\textit{Research Proposal}}\\
+\textit{\href{https://drive.google.com/file/d/1Dy6xjWMH5EVmVreHnUj9QBFsuitt-dDZ/view?usp=sharing}{\textcolor{blue}{Exoplanet Transit Classification using Recurrent Neural Networks}}}\\
+The project proposal was submitted as the final project to \href{https://github.com/howardisaacson/Intro-to-Astro-2020}{\textcolor{blue}{Intro to Astrophysics Research 2020 course}} by \href{https://hisaacson2.wixsite.com/website}{\textcolor{blue}{Howard Isaacson}}, Research Scientist, University of California, Berkeley.
+
+
 \\
-\textbf{\textit{Poster}}\\ \textit{"DRIZY: Collaborative Driver Assistance Over Wireless Networks",}
-\\N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall, \\
+\textbf{\textit{Publication - Poster}}\\ \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{DRIZY: Collaborative Driver Assistance Over Wireless Networks}}}:\hspace{0.3cm} N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall, \\
 ACM MobiCom 2017, Snowbird, Utah, USA
 \\Proceedings of the 23rd Annual International Conference on Mobile Computing and Networking
 
 \\
-\textbf{\textit{Conference Paper}}\\ \textit{"Aquacom: Underwater Visible Light Communication"}\\
-I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh\\
+\textbf{\textit{Publication - Conference Paper (2738)}}\\ \textcolor{blue}{\textit{\href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers.html}{Aquacom: Underwater Visible Light Communication}}}:\hfill I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh\\
 Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
-
-
 \vspace{\sectgap} 
 \hline
 
@@ -197,9 +179,6 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 % {\bf \textit{Contributed Conference Talks}}\\
 % \textit{Title}. Presented at Conference name, City, State (Month year) \\
 
-% {\bf \textit{Contributed Conference Posters}}\\
-% \textit{Title}. Presented at Conference name, City, State (Month year) \\
-
 % \vspace{\sectgap} % Some whitespace between sections
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -211,23 +190,23 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 \begin{itemize}
     \item
     \href{https://github.com/chetanchawla/eYantra2018-HB}{\textcolor{blue}{Autonomous drone traversal and waypoint navigation in constrained paths}} \hfill Apr'19
-    % \vspace{-0.05in}
-    % \item \href{https://github.com/chetanchawla/Dronalyser}{Dronalyser: Agricultural-Analyser Drone System} \hfill Mar'19
-    % \vspace{-0.05in}
+    %\vspace{-0.05in}
+    \item \textcolor{blue}{\href{https://github.com/chetanchawla/Dronalyser}{Multispectral Crop Analysis}} \hfill Mar'19
+    %\vspace{-0.05in}
     \item
-    \href{https://github.com/chetanchawla/Future-Gadget-Labs-HINT}{\textcolor{blue}{Meishu: Real-time networking based rescue system}} \hfill Mar'19
-    % \vspace{-0.05in}
-    \item
-    \href{https://github.com/Future-Gadgets-Lab/FOS-Fire-SOS-System}{\textcolor{blue}{FOS: Fire SOS and evacuation assistance system}} \hfill Sep'18
-    % \vspace{-0.05in}
+    \textcolor{blue}{\href{https://github.com/Future-Gadgets-Lab/FOS-Fire-SOS-System}{Wildfire SOS}} and \textcolor{blue}{\href{https://github.com/chetanchawla/Future-Gadget-Labs-HINT}{evacuation assistance system}} \hfill Mar'19
+    % % \vspace{-0.05in}
     % \item
-    % \href{http://people.cs.pitt.edu/~kovashka/ads/}{Video advertisements effectiveness: audio module} \hfill Apr'18
-    % \vspace{-0.05in}
+    % \href{https://github.com/Future-Gadgets-Lab/FOS-Fire-SOS-System}{\textcolor{blue}{FOS: Fire SOS and evacuation assistance system}} \hfill Sep'18
+    
+    \item
+    \textcolor{blue}{\href{http://people.cs.pitt.edu/~kovashka/ads/}{Video advertisements effectiveness}} : \textcolor{blue}{\href{https://github.com/chetanchawla/Audio-Analysis}{Audio module}} \hfill Apr'18
+    
     \item
     \href{https://github.com/chetanchawla/Deep-Learning-for-Music-Generation}{\textcolor{blue}{Music Generation Using Deep Learning}} \hfill Jan'18
     % \vspace{-0.05in}
     \item
-    \href{https://github.com/chetanchawla/eYantra-2016-Bothoven}{\textcolor{blue}{Swarming UGVs and path planning for coordinated task execution in space}} \hfill Mar'17
+    \href{https://github.com/chetanchawla/eYantra-2016-Bothoven}{\textcolor{blue}{Synchronous path planning and coordinated task execution for Mars rovers}} \hfill Mar'17
     % \vspace{-0.05in}
     \item
     \href{https://github.com/chetanchawla/Blender-Models}{\textcolor{blue}{Real-time Planet terrain analyzing \& modelling simulations}}\hfill Feb'17
@@ -235,14 +214,17 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 \vspace{\sectgap} 
 \hline
 
-\section{LEADERSHIP EXPERIENCE}
+\section{LEADERSHIP \& VOLUNTEER EXPERIENCE}
 \vspace{0.25in}
 \begin{itemize}
-    \item Co-organizer, \href{delhi.pydata.org}{\textcolor{blue}{PyData Delhi}} and marketing India head, \href{global.pydata.org}{\textcolor{blue}{PyData Global Conf}} \hfill 2020
-    \item Vice Chairperson, \href{https://bvpieeend.com}{\textcolor{blue}{IEEE Student Branch of BVCOE}} \hfill 2018-19
-    \item Conference Chair, \href{https://bvpieeend.com/innovicon/}{\textcolor{blue}{Innovicon}} \hfill 2019
-    \item Chairperson, Robotics and Automation Society, IEEE BVCOE \hfill 2017-18
+    \item Co-organizer, \href{https://pydata.org/}{\textcolor{blue}{PyData Delhi}} and marketing India head, \href{https://global.pydata.org}{\textcolor{blue}{PyData Global Conference}} \hfill 2020
+    \item Vice Chairperson, \href{https://site.ieee.org/sb-bvcoend/}{\textcolor{blue}{IEEE Student Branch of BVCOE}} \hfill 2018-19
+    \item Instructor \& Organizer, Deep Learning workshop series, BVCOE \hfill 2018-19
     
+    \item Conference Chair, AI and Data Sceince session based conference - Innovicon
+    %\href{https://innovicon.bvpieeend.com/}{\textcolor{blue}{Innovicon}} 
+    \hfill 2019
+    \item Chairperson, Robotics and Automation Society, IEEE BVCOE \hfill 2017-18
 \end{itemize}
 
 
@@ -291,7 +273,7 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 \vspace{0.1in} 
 
 \textbf{Proficient}: Python, SQL, C, Embedded C/Arduino C, Unix shell scripting, ROS, and \LaTeX \vspace{0.05in}\\
-\textbf{Working knowledge}: HTML5, MATLAB, Lua, Tableau and VHDL
+\textbf{Working knowledge}: HTML, MATLAB, Lua, Tableau, C++, Android, Java
 \vspace{0.05in}\\
 \textbf{Libraries}: Tensorflow, Keras, OpenCV, Matplotlib, Pandas, Numpy, Radvel, LightKurve, blimpy, turboSETI, pyMC, beautifulsoup
 \vspace{0.05in}\\
