--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
-\usepackage[margin=0.94in]{geometry}
+\usepackage[margin=0.94in, top=0.72in]{geometry}
 
 
 \begin{document}
@@ -100,14 +100,15 @@ Project Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github
 
 \vspace{\titlegap}
 
-{\bf Bachelors of Technology, Electronics and Communication Engineering} \hfill Aug'15 -- Jul'19 \\ 
-\href{http://bvcoend.ac.in}{\textcolor{blue}{Bharati Vidyapeeth's College Of Engineering}}\\
-Guru Gobind Singh Indraprastha University (GGSIPU), New Delhi, India \\
+{\bf Bachelor of Technology, Electronics and Communication Engineering} \hfill Aug'15 -- Jul'19 \\ 
+\href{http://www.ipu.ac.in/}{\textcolor{blue}{Guru Gobind Singh Indraprastha University}}, \href{http://bvcoend.ac.in}{\textcolor{blue}{Bharati Vidyapeeth's College Of Engg., New Delhi}}\\
+Notable Coursework: Applied Physics (I \& II), Applied Mathematics (I, II, III, \& IV), Electromagnetic Field Theory, Signals and Systems, Digital Signal Processing, Optoelectronics and Optical Communication, Antenna and Wave Propagation, Microwave Engineering, Satellite Communication \\
 \textbf{CGPA}: 8.94 out of 10 (Silver Medalist) \hspace{0.2in}
 \hfill Advisor: Asst. Prof. Abhishek Gagneja
 
 {\bf AISSCE, CBSE Board (XII grade - Science Stream)} \hfill Apr'14 -- May'15 \\ 
-Kendriya Vidyalaya Tagore Garden, New Delhi, India\\
+Kendriya Vidyalaya Tagore Garden, New Delhi, India\\ 
+Subjects: Physics, Maths, Chemistry, Biology, English\\
 \textbf{Percentage}: 95\% (Gold Medalist, Positioned in top 1.5\%, KVS India)
 
 \vspace{\sectgap}
@@ -146,18 +147,19 @@ Kendriya Vidyalaya Tagore Garden, New Delhi, India\\
 
 \textbf{\textit{Research Proposal}}\\
 \textit{\href{https://drive.google.com/file/d/1Dy6xjWMH5EVmVreHnUj9QBFsuitt-dDZ/view?usp=sharing}{\textcolor{blue}{Exoplanet Transit Classification using Recurrent Neural Networks}}}\\
-The project proposal was submitted as the final project to \href{https://github.com/howardisaacson/Intro-to-Astro-2020}{\textcolor{blue}{Intro to Astrophysics Research 2020 course}} by \href{https://hisaacson2.wixsite.com/website}{\textcolor{blue}{Howard Isaacson}}, Research Scientist, University of California, Berkeley.
+The project proposal was submitted as the final project to \href{https://github.com/howardisaacson/Intro-to-Astro-2020}{\textcolor{blue}{Intro to Astrophysics Research 2020 course}} by \href{https://hisaacson2.wixsite.com/website}{\textcolor{blue}{Howard Isaacson}}, Research Scientist, University of California, Berkeley
 
 
 \\
-\textbf{\textit{Publication - Poster}}\\ \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{DRIZY: Collaborative Driver Assistance Over Wireless Networks}}}:\hspace{0.3cm} N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall, \\
+\textbf{\textit{Publication - Poster}}\\ \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{DRIZY: Collaborative Driver Assistance Over Wireless Networks}}}:\hspace{0.3cm} N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall\\
 ACM MobiCom 2017, Snowbird, Utah, USA
 \\Proceedings of the 23rd Annual International Conference on Mobile Computing and Networking
 
 \\
 \textbf{\textit{Publication - Conference Paper (2738)}}\\ \textcolor{blue}{\textit{\href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers.html}{Aquacom: Underwater Visible Light Communication}}}:\hfill I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh\\
 Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
-\vspace{\sectgap} 
+
+\vspace{0.1in} 
 \hline
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -278,7 +280,8 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 \textbf{Libraries}: Tensorflow, Keras, OpenCV, Matplotlib, Pandas, Numpy, Radvel, LightKurve, blimpy, turboSETI, pyMC, beautifulsoup
 \vspace{0.05in}\\
 \textbf{Key Technologies}: \textbullet{} Astrophysics \textbullet{} Deep Learning \textbullet{} Robotics \& Networking \textbullet{} Computer Vision \textbullet{} UAV \& UGV path planning \textbullet{} Data ETL \textbullet{} RPA \textbullet{} Signal Processing \textbullet{} 3D Modelling \& Simulation
-\vspace{\sectgap}
+
+\vspace{0.1in}
 \hline
 
 % \vspace{\censectgap} % Some whitespace between sections
