--- a/main.tex
+++ b/main.tex
@@ -9,6 +9,7 @@
 \usepackage{xcolor}
 \usepackage[hidelinks]{hyperref}
 \usepackage{paralist}
+\usepackage{lastpage}
 
 \newsectionwidth{0pt} % Stops section indenting
 
@@ -30,7 +31,7 @@
 \renewcommand{\headrulewidth}{0pt}
 \renewcommand{\footrulewidth}{0pt}
 
-\usepackage[margin=0.94in, top=0.72in]{geometry}
+\usepackage[margin=0.94in, top=0.6in, bottom=0.9in]{geometry}
 
 
 \begin{document}
@@ -59,8 +60,18 @@ Phone: (+91) 90133 07073 \\  \noindent\rule{8.5cm}{0.8pt}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	Current Position Section
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\vspace{-0.2cm}
 \section{POSITIONS}
 \vspace{\titlegap}
+
+
+{\bf \href{https://events.asiaa.sinica.edu.tw/ssp/2021/}{\textcolor{blue}{Academia Sinica Institute of Astronomy and Astrophysics}},} Taipei, Taiwan (Remote)\\
+Incoming Summer Research Intern, Jul'21 -- Aug'21
+\begin{itemize}
+ \item I will be working under the supervision of \href{https://alexteachey.wordpress.com/}{\textcolor{blue}{Dr. Alex Teachey}} on Identifying Temperate Planet Candidates in the TESS Continuous Viewing Zone data
+\end{itemize}
+
+\vspace{-0.1cm}
 {\bf \href{https://www.zs.com/}{\textcolor{blue}{ZS Associates}},} New Delhi, India\\
 Business Technology Analyst, Jun'19 -- Jan'21
 \begin{itemize}
@@ -68,15 +79,7 @@ Business Technology Analyst, Jun'19 -- Jan'21
     \item Automated several high-impact reporting modules like Textual insights generation, Data Pull \& Business Rule Implementations, and Backup-Deletion systems
 \end{itemize}
 
-
-% \vspace{\sectgap}
-% \hline
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%	Past Position Section
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% \section{PAST POSITIONS}
-% \vspace{\titlegap}
+\vspace{-0.1cm}
 {\bf Indian Insitute of Technology, Delhi, India} - Electrical \& Electronics Dept\\
 Research Intern, Jun'18 – Aug'18 \hfill Mentor: \href{https://web.iitd.ac.in/~brejesh/}{Dr.Brejesh Lall} (Head, EE Dept, IIT-D)
 \begin{itemize}
@@ -84,8 +87,9 @@ Research Intern, Jun'18 – Aug'18 \hfill Mentor: \href{https://web.iitd.ac.in/~
     \item Creating and benchmarking an Indian road detection and tracking dataset (over 50,000 annotated frames containing 7 classes and occlusion information). \textcolor{blue}{\href{https://drive.google.com/file/d/1VzW1S9UInuxXegAi2ursUIjQHOWDsS6R/view?usp=sharing}{Report Link}}
 \end{itemize} 
 
+\vspace{-0.1cm}
 \href{https://www.marconisociety.org/programs-services/}{\textbf{\textcolor{blue}{Celestini Project India}}}, Marconi Society \& IIT Delhi, India\\
-Project Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github.io/achowdhery-website/index.html}{Dr.A Chowdhery} (Google Brain, Tensorflow)
+Summer Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github.io/achowdhery-website/index.html}{Dr.A Chowdhery} (Google Brain, Tensorflow)
 \begin{itemize}
 \item Prototyping and creating test-bed for a low latency collaborative driver assistance system to prevent on-road collisions using real-time networking of sensory data from vehicles. \textcolor{blue}{\href{https://bhartischool.iitd.ac.in/pdf/7thISSUEnewsletter.pdf}{Link (Pg4)}}
 \end{itemize}
@@ -100,7 +104,7 @@ Project Intern, Jun'17 – Jul'17 \hfill Mentor: \href{https://achowdhery.github
 
 \vspace{\titlegap}
 
-{\bf Bachelor of Technology, Electronics and Communication Engineering} \hfill Aug'15 -- Jul'19 \\ 
+{\bf Bachelor of Technology, Electronics and Communication Engineering} \hfill Aug'15 -- May'19 \\ 
 \href{http://www.ipu.ac.in/}{\textcolor{blue}{Guru Gobind Singh Indraprastha University}}, \href{http://bvcoend.ac.in}{\textcolor{blue}{Bharati Vidyapeeth's College Of Engg., New Delhi}}\\
 Notable Coursework: Applied Physics (I \& II), Applied Mathematics (I, II, III, \& IV), Electromagnetic Field Theory, Signals and Systems, Digital Signal Processing, Optoelectronics and Optical Communication, Antenna and Wave Propagation, Microwave Engineering, Satellite Communication \\
 \textbf{CGPA}: 8.94 out of 10 (Silver Medalist) \hspace{0.2in}
@@ -109,9 +113,9 @@ Notable Coursework: Applied Physics (I \& II), Applied Mathematics (I, II, III, 
 {\bf AISSCE, CBSE Board (XII grade - Science Stream)} \hfill Apr'14 -- May'15 \\ 
 Kendriya Vidyalaya Tagore Garden, New Delhi, India\\ 
 Subjects: Physics, Maths, Chemistry, Biology, English\\
-\textbf{Percentage}: 95\% (Gold Medalist, Positioned in top 1.5\%, KVS India)
+\textbf{Percentage}: 95\% (Gold Medalist, Positioned in top 1.5\% from 1.2million enrolments, KVS India)
 
-\vspace{\sectgap}
+\vspace{0.1in}
 \hline
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %	HONORS SECTION
@@ -123,12 +127,9 @@ Subjects: Physics, Maths, Chemistry, Biology, English\\
 
 \begin{itemize}
     \item Project Champions Award, ZS Associates, New Delhi, India \hfill 2019, 2020
-    \item Best Student of the Year Award, Electronics and Communication dept., Bharati \\
-    Vidyapeeth's College Of Engineering\hfill 2019
+    \item Best Student Award, Electronics and Communication department, BVCOE \hfill 2019
     \item{}JK Pal Memorial- Best Student Volunteer Award, IEEE Delhi Section (R10) \hfill 2019
-    \item Paul Baran Young Scholar Celestini Prize India 2017, felicitated by \href{https://marconisociety.org/about/board-of-directors/robert-tkach-2/}{Dr.Robert\\
-    Tkach} (Vice-
-    chairman, Marconi Society) \hfill 2017
+    \item Paul Baran Young Scholar Celestini Prize India 2017, Team prize money: \$1500 \hfill 2017
     \item Runner Ups: E-yantra Robotics Competition, CSE Department, IIT Bombay \hfill 2016
 \end{itemize}
 
@@ -146,17 +147,17 @@ Subjects: Physics, Maths, Chemistry, Biology, English\\
 \vspace{\titlegap}
 
 \textbf{\textit{Research Proposal}}\\
-\textit{\href{https://drive.google.com/file/d/1Dy6xjWMH5EVmVreHnUj9QBFsuitt-dDZ/view?usp=sharing}{\textcolor{blue}{Exoplanet Transit Classification using Recurrent Neural Networks}}}\\
+\textit{\href{https://drive.google.com/file/d/1Dy6xjWMH5EVmVreHnUj9QBFsuitt-dDZ/view?usp=sharing}{\textcolor{blue}{Exoplanet Transit Classification using Recurrent Neural Networks}}}  \hfill \textbf{C. Chawla} \\
 The project proposal was submitted as the final project to \href{https://github.com/howardisaacson/Intro-to-Astro-2020}{\textcolor{blue}{Intro to Astrophysics Research 2020 course}} by \href{https://hisaacson2.wixsite.com/website}{\textcolor{blue}{Howard Isaacson}}, Research Scientist, University of California, Berkeley
 
 
 \\
-\textbf{\textit{Publication - Poster}}\\ \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{DRIZY: Collaborative Driver Assistance Over Wireless Networks}}}:\hspace{0.3cm} N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall\\
+\textbf{\textit{Publication - Conference Poster}}\\ \textcolor{blue}{\textit{\href{https://dl.acm.org/doi/10.1145/3117811.3131255}{DRIZY: Collaborative Driver Assistance Over Wireless Networks}}}:\hspace{0.3cm} N. Garg, I. Janveja, D. Malhotra, \textbf{C. Chawla}, P. Gupta, H. Bansal, A. Chowdhery, P. Mukherjee, B. Lall\\
 ACM MobiCom 2017, Snowbird, Utah, USA
 \\Proceedings of the 23rd Annual International Conference on Mobile Computing and Networking
 
 \\
-\textbf{\textit{Publication - Conference Paper (2738)}}\\ \textcolor{blue}{\textit{\href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers.html}{Aquacom: Underwater Visible Light Communication}}}:\hfill I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh\\
+\textbf{\textit{Publication - Conference Paper (Paper ID: 2738)}}\\ \textcolor{blue}{\textit{\href{http://bvicam.in/INDIACom/news/INDIACom\%202018\%20Proceedings/Main/papers.html}{Aquacom: Underwater Visible Light Communication}}}:\hfill I. Janveja, N.Garg, \textbf{C. Chawla}, J. Parikh\\
 Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 
 \vspace{0.1in} 
@@ -216,17 +217,19 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 \vspace{\sectgap} 
 \hline
 
-\section{LEADERSHIP \& VOLUNTEER EXPERIENCE}
+\section{LEADERSHIP, VOLUNTEERING \& OUTREACH}
 \vspace{0.25in}
 \begin{itemize}
+    \item Incoming Mentor at \href{https://github.com/howardisaacson/Intro-to-Astro-2021}{Intro-to-Astro 2021} summer course by Howard Isaacson, UCB \hfill 2021
     \item Co-organizer, \href{https://pydata.org/}{\textcolor{blue}{PyData Delhi}} and marketing India head, \href{https://global.pydata.org}{\textcolor{blue}{PyData Global Conference}} \hfill 2020
-    \item Vice Chairperson, \href{https://site.ieee.org/sb-bvcoend/}{\textcolor{blue}{IEEE Student Branch of BVCOE}} \hfill 2018-19
-    \item Instructor \& Organizer, Deep Learning workshop series, BVCOE \hfill 2018-19
+    \item Vice Chairperson, \href{https://bvpieee.com/}{\textcolor{blue}{BVP IEEE}} - lead 80 members, Chaired and Founded \href{https://innovicon.bvpieee.com}{\textcolor{blue}{Innovicon}}\\
+    Conference, All Women Hackathon \href{https://wiehack.bvpieee.com}{\textcolor{blue}{WIEHack}}, headed Eta Kappa Nu and RAS \hfill 2018-19
+    \item Instructor \& Organizer, Deep Learning workshop series, BVCOE for 60+ students \hfill 2018-19
     
-    \item Conference Chair, AI and Data Sceince session based conference - Innovicon
+    %\item Conference Chair, AI and Data Sceince session based conference - Innovicon
     %\href{https://innovicon.bvpieeend.com/}{\textcolor{blue}{Innovicon}} 
-    \hfill 2019
-    \item Chairperson, Robotics and Automation Society, IEEE BVCOE \hfill 2017-18
+    %\hfill 2019
+    % \item Chairperson, Robotics and Automation Society, IEEE BVCOE \hfill 2017-18
 \end{itemize}
 
 
@@ -274,7 +277,7 @@ Proceedings of the 12th INDIACom 2018, BVICAM, New Delhi, India
 
 \vspace{0.1in} 
 
-\textbf{Proficient}: Python, SQL, C, Embedded C/Arduino C, Unix shell scripting, ROS, and \LaTeX \vspace{0.05in}\\
+\textbf{Proficient}: Python, SQL, C, Unix shell scripting, \LaTeX, Embedded C/Arduino C and ROS\vspace{0.05in}\\
 \textbf{Working knowledge}: HTML, MATLAB, Lua, Tableau, C++, Android, Java
 \vspace{0.05in}\\
 \textbf{Libraries}: Tensorflow, Keras, OpenCV, Matplotlib, Pandas, Numpy, Radvel, LightKurve, blimpy, turboSETI, pyMC, beautifulsoup
